# fastapi_blog

./: .gitignore  Makefile  README.md  dockerfile  pyproject.toml
app/: main.py
app/core/: auth.py  config.py
app/models/: foo.py  user.py
app/routers/: api.py
app/schemas/: foo.py  user.py
app/services/: base.py
app/tests/: test_async_fast.py  test_conf.py  test_root.py  test_user.py
app/utils/: service_result.py
src/: main.py
src/core/: celery.py  celery_worker.py  consts.py
src/models/: board.py  user.py
src/schemas/: base_schemas.py  user.py
src/tests/: test_conf.py  test_root.py  test_user.py
