[tool.poetry]
name = "async_fast"
version = "0.1.0"
description = ""
authors = ["ctsictai <ctsictai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"
SQLAlchemy = "^1.4.31"
PyMySQL = "^1.0.2"
fastapi-crudrouter = "^0.8.5"
black = "^22.1.0"
pytest = "^7.1.1"
requests = "^2.27.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
