[tool.poetry]
name = "fastapi_blog"
version = "0.1.0"
description = "fastapi webframework"
authors = ["ctsictai <ctsictai@gmail.com>"]
license = "ctsictai <ctsictai@gmail.com>"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
pytest = "^7.1.1"
SQLAlchemy = "^1.4.35"
aiomysql = "^0.1.0"
PyMySQL = "^1.0.2"
celery = "^5.2.6"
fastapi-crudrouter = "^0.8.5"
python-jose = "^3.3.0"
cryptography = "^37.0.2"
PyJWT = "^2.3.0"
passlib = "^1.7.4"
bcrypt = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
